files/script/test_all/parse_error/var/test_var_error2.ll
def main()
{
    var string = 100I12

}
#script("script/test_all/parse_error/var/test_var_error2.ll")